# python-source-code

./: CMakeLists.txt
.github/workflows/: build.yml  doc.yml
Include/: object.h
Include/cpython/: longintrepr.h  object.h
Objects/: longobject.c  typeobject.c
